build: add ruff lint and format config to pyproject.toml
Configure ruff:
- 79-char lines
- py39 target
- extend lint selects with flake8-bugbear and flake8-quotes
- set format options for consistency and auto line endings

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,3 +8,16 @@ dependencies = [
     "httpx>=0.28.1",
     "pydantic>=2.10.6",
 ]
+
+[tool.ruff]
+line-length = 79
+indent-width = 4
+target-version = "py39"
+
+[tool.ruff.lint]
+# On top of the default `select` (`E4`, E7`, `E9`, and `F`), enable flake8-bugbear (`B`) and flake8-quotes (`Q`).
+extend-select = ["B", "Q"]
+
+[tool.ruff.format]
+line-ending = "auto"
+docstring-code-format = true
