config: add basedpyright hook to pre-commit config
Integrate basedpyright type checking into the pre-commit workflow to catch type
errors early and ensure consistent development standards.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,7 +7,6 @@ repos:
     exclude: frontend/scss/icons.scss
   - id: trailing-whitespace
 - repo: https://github.com/astral-sh/ruff-pre-commit
-  # Ruff version.
   rev: v0.11.13
   hooks:
     # Run the linter.
@@ -15,6 +14,10 @@ repos:
       args: [ --fix ]
     # Run the formatter.
     - id: ruff-format
+- repo: https://github.com/DetachHead/basedpyright-prek-mirror
+  rev: 1.32.1
+  hooks:
+      - id: basedpyright
 - repo: https://github.com/jendrikseipp/vulture
   rev: 'v2.3'  # or any later Vulture version
   hooks:
