config: update pyproject.toml for python 3.10 and pytest options
Bump minimum Python version requirement to 3.10 for better compatibility with
modern typing features.

Update pytest configuration:

- Remove parallel testing by default (-n auto) to avoid potential issues with
  dev tools
- Add verbose output (-v) for clearer test results
- Enable CLI logging with INFO level for improved debugging during test runs

Remove explicit pythonVersion from basedpyright config, as it now defaults to
the first found interpreter.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "i-unipile-sdk"
 version = "0.1.0"
 description = "Python SDK for interacting with Unipile API."
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 dependencies = [
     "httpx>=0.28.1",
     "pydantic>=2.10.6",
@@ -21,16 +21,17 @@ dev = [
 [tool.pytest.ini_options]
 minversion = "6.0"
 addopts = [
-    "-n", "auto",  # Auto-detect CPU count
+    "-v",
     "--dist", "loadscope",  # Group by module
 ]
 testpaths = [
     "tests",
     "integration",
 ]
+log_cli = true
+log_cli_level = "INFO"
 
 [tool.basedpyright]
-pythonVersion = "3.9"
 typeCheckingMode = "basic"
 
 # Disable some reporting, to avoid interference with ruff
