test(integration): add env loading and messaging fixtures
Load .env.tests file at session start to provide configuration for integration
tests.

Update fixtures to use env vars for LinkedIn URNs and add new ones for
inviting, messaging, and random send messages.

Add python-dotenv dependency.

Add pytest marker for messaging tests and --with-messaging option.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.10"
 dependencies = [
     "httpx>=0.28.1",
     "pydantic>=2.10.6",
+    "python-dotenv>=1.2.1",
 ]
 
 [dependency-groups]
@@ -30,6 +31,9 @@ testpaths = [
 ]
 log_cli = true
 log_cli_level = "INFO"
+markers = [
+    "messaging: marks tests as messaging tests",
+]
 
 [tool.basedpyright]
 typeCheckingMode = "basic"
