--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "i-unipile-sdk"
-version = "0.1.0"
+version = "0.3.0a1"
 description = "Python SDK for interacting with Unipile API."
 readme = "README.md"
 requires-python = ">=3.10"
